--- a/jnvpx/src/main/AndroidManifest.xml
+++ b/jnvpx/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="my.myusri.libvpx"/>
+<manifest package="my.myusri.libvpx"/>
