--- a/jnvpx/.gitignore
+++ b/jnvpx/.gitignore
@@ -1,10 +1,5 @@
 /build
-/armeabi-v7a/armeabi-v7a/
-/*/config.*
-/*/Makefile
-/*/libs-*-android-gcc.mk
-/*/vpx_config.*
-/*/*rtcd.h
-/*/vpx_version.h
+/armeabi-v7a
+/x86
 /obj
 libvpx
