--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':javastubs', ':jnvpx', ':jnffmpeg', ':jnopus', ':jnspeex', ':txApp'
+include ':javastubs', ':jnidispatch', ':jnandroid', ':jnvpx', ':jnffmpeg', ':jnopus', ':jnspeex', ':txApp'
