--- a/txApp/build.gradle
+++ b/txApp/build.gradle
@@ -24,11 +24,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    externalNativeBuild {
-        cmake {
-            path 'CMakeLists.txt'
-        }
-    }
     packagingOptions {
         exclude "META-INF/*.SF"
         exclude "META-INF/*.DSA"
@@ -62,6 +57,7 @@ dependencies {
     compile project(':jnffmpeg')
     compile project(':jnopus')
     compile project(':jnspeex')
+    compile project(':jnandroid')
 
     task compileJavaStubs {
         provided project(':javastubs')
